--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/projects11/index2.html"
+    "livePreview.defaultPreviewPath": "/project12/index.html"
 }
